Fix for header on small screens

--- a/.build/tailwind.css
+++ b/.build/tailwind.css
@@ -15,7 +15,6 @@
 @theme {
   --font-*: initial;
   --font-sans: Poppins, sans-serif;
-  --breakpoint-xs: 30rem;
 }
 
 /*
